--- a/views/superadminDashboard.ejs
+++ b/views/superadminDashboard.ejs
@@ -121,7 +121,7 @@
         
         <div class="sidebar">
             <div style="height: 100px;"></div>
-            <div class="sidebarDiv">
+            <div onclick="window.location.href='/superadmin/create-project'" class="sidebarDiv">
                 <img src="/public/img/language.svg" class="sidebarImg">
             </div>
             <div class="sidebarDiv">
