--- a/views/superadminCreateProject1.ejs
+++ b/views/superadminCreateProject1.ejs
@@ -88,7 +88,7 @@
                 
             </header>
 
-            <div class="container" style="max-width: 80%;margin-top: 50px;padding: 40px 80px;background: #FFFFFF 0% 0% no-repeat padding-box;box-shadow: 0px 0px 6px #00000024;">
+            <div class="container" style="max-width: 80%;margin-top: 50px;margin-left:0.6rem;padding: 40px 80px;background: #FFFFFF 0% 0% no-repeat padding-box;box-shadow: 0px 0px 6px #00000024;">
 
                 <h5 style="padding: 5px 15px;color: #27272780;text-transform: uppercase;">New project</h5>
                 <h4 style="font-family: ProductB;font-size: 30px;padding: 5px 15px;">Create a new project</h4>
