--- a/views/superadminDashboard.ejs
+++ b/views/superadminDashboard.ejs
@@ -187,7 +187,7 @@
                                 <div id="container2" style="position: relative;top: 10px;right: 30px;"></div>
                             </div>
                             <div class="arrow-adjust">
-                                <img src="/public/img/arrow-right.svg">
+                                <a href="/superadmin/dashboard/orgmembership-Users"><img src="/public/img/arrow-right.svg"></a>
                             </div>
                         </div>
                     </div>
