--- a/views/myprojects.ejs
+++ b/views/myprojects.ejs
@@ -30,8 +30,8 @@
                             
                         </div> -->
                         <ul class="nav-menu">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Ongoing Project</a></li>
+                            <li><a href="/home/">Home</a></li>
+                            <li><a href="#">Ongoing Project</a></li>
                               <%if(hide_manage_students==true){%>
                             <li class="menu-has-children dropdown-toggle"><a href="">Membership</a>
 
