--- a/views/superadminDashboard.ejs
+++ b/views/superadminDashboard.ejs
@@ -235,7 +235,7 @@
                                 <h1><%=tn10p%></h1>
                                 <p>10dem Projects</p>
                             </div>
-                            <div class="arrow-adjust">
+                            <div onclick="window.location.href='/superadmin/projects'" class="arrow-adjust">
                                 <img src="/public/img/arrow-right.svg">
                             </div>
                         </div>
