--- a/views/superadminDashboard.ejs
+++ b/views/superadminDashboard.ejs
@@ -173,7 +173,7 @@
                                 <div id="container1" style="position: relative;top: 10px;right: 30px;"></div>
                             </div>
                             <div class="arrow-adjust">
-                                <img src="/public/img/arrow-right.svg">
+                                <a href="/superadmin/dashboard/10dempro-Users"><img src="/public/img/arrow-right.svg"></a>
                             </div>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                                 <div id="container3" style="position: relative;top: 10px;right: 30px;"></div>
                             </div>
                             <div class="arrow-adjust">
-                                <img src="/public/img/arrow-right.svg">
+                                <a href="/superadmin/dashboard/nonprofit-Users"><img src="/public/img/arrow-right.svg"></a>
                             </div>
                         </div>
                     </div>
