--- a/views/superadminProjects.ejs
+++ b/views/superadminProjects.ejs
@@ -144,7 +144,7 @@
                             <%for(i of projects){%>
                                 <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12">
                                     <div class="card">
-                                        <img src="\<%=i.projectCover%>" class="card-img-top" alt="...">
+                                        <a href="/10DemProjectView/<%=i._id%>"><img src="\<%=i.projectCover%>" class="card-img-top" alt="..."></a>
                                         <div class="card-body">
                                             <div class="DIV">
                                                 <p>Project title</p>
